# aitw-target

./: .gitignore  README.md  deployment.yaml  provider.py  pyproject.toml
defense/: __init__.py  broker.py  bulletin.py  policy_registry.py  sanitizer.py  scanner.py  scoped_store.py
schemas/: operational_bulletin.schema.json
tests/: test_acceptance_1_scanner.py  test_acceptance_2_own_tenant.py  test_acceptance_3_cross_tenant.py  test_acceptance_4_allowlist.py  test_bulletin_repeat_read.py  test_bulletin_schema.py  test_clean_host_import.py  test_no_banned_terms.py
