[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harish-exhibition-defense"
version = "0.1.0"
description = "Defense-layer deployment provider for the stock aitw-target runtime."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = ["provider"]

[tool.setuptools.packages.find]
include = ["defense*"]

[tool.setuptools.package-data]
"*" = ["schemas/*.json"]
